trying to fix overflow and sizing of cards

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,4 +1,9 @@
 .card {
-	width: 100% !important;
-	height: 50% !important;
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+}
+
+.card-column {
+	column-count: 3;
 }
